# realtime-data-collection-and-storage

./: CMakeLists.txt  dataChannel.cpp  dataChannel.h  dataCollector.cpp  dataCollector.h  dataInput.cpp  dataInput.h  dataPoint.cpp  dataPoint.h  extractedSubChannel.cpp  extractedSubChannel.h  jsonFunctions.cpp  jsonFunctions.h  main.cpp  tests.cpp  timer.cpp  timer.h
